[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screen19"
version = "0.213"
description = "Screening program for small-molecule single-crystal X-ray diffraction data"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    { name = "Diamond Light Source", email = "scientificsoftware@diamond.ac.uk" },
]
requires-python = ">=3.10"
dependencies = [
    "procrunner",
    "numpy",
    "scipy",
    "tabulate",
]

[dependency-groups]
dev = [
    "dials-data",
    "mock>=2.0",
    "pytest>=4.5",
]

[project.urls]
Download = "https://github.com/xia2/screen19/releases"
GitHub = "https://github.com/xia2/screen19"
Bug-Tracker = "https://github.com/xia2/screen19/issues"

[project.scripts]
"i19.screen" = "screen19.screen:main"
"screen19" = "screen19.screen:main"
"i19.stability_fft" = "screen19.stability_fft:main"
"i19.minimum_exposure" = "screen19.minimum_exposure:main"
"screen19.minimum_exposure" = "screen19.minimum_exposure:main"

[project.entry-points."libtbx.precommit"]
"screen19" = "screen19"

[tool.pytest.ini_options]
addopts = "-rsxX"

[tool.towncrier]
package = "screen19"
package_dir = ".."
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/xia2/screen19/issues/{issue}>`_"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "I"]
unfixable = ["F841"]
# E501 line too long (handled by formatter)
# E741 Ambiguous variable name (We have lots of meaningful I, L, l)
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"installer/**.py" = ["I"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["dxtbx_*", "dxtbx", "dials"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "cctbx",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"cctbx" = [
    "boost",
    "boost_adaptbx",
    "cbflib_adaptbx",
    "cctbx",
    "chiltbx",
    "clipper_adaptbx",
    "cma_es",
    "cootbx",
    "crys3d",
    "cudatbx",
    "fable",
    "fast_linalg",
    "fftw3tbx",
    "gltbx",
    "iota",
    "iotbx",
    "libtbx",
    "mmtbx",
    "omptbx",
    "prime",
    "rstbx",
    "scitbx",
    "serialtbx",
    "simtbx",
    "smtbx",
    "spotfinder",
    "tbxx",
    "ucif",
    "wxtbx",
    "xfel",
]

[tool.bumpversion]
current_version = "0.213"
commit = true
tag = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)(\\.(?P<patch>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}",
    "{major}.{minor}",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "screen19/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
