[bumpversion]
current_version = 0.212
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+))?
serialize = 
	{major}.{minor}.{patch}
	{major}.{minor}

[bumpversion:file:setup.py]
search = version="{current_version}",
replace = version="{new_version}",

[bumpversion:file:screen19/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs

[aliases]
test = pytest

[metadata]
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
project-urls =
    Download = https://github.com/xia2/screen19/releases
    GitHub = https://github.com/xia2/screen19
    Bug-Tracker = https://github.com/xia2/screen19/issues

[options]
python_requires = >=3.6

[tool:pytest]
collect_ignore = ['setup.py']
