[bumpversion]
current_version = 0.213
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+))?
serialize = 
	{major}.{minor}.{patch}
	{major}.{minor}

[bumpversion:file:setup.py]
search = version="{current_version}",
replace = version="{new_version}",

[bumpversion:file:screen19/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs

[aliases]
test = pytest

[metadata]
name = screen19
author = Diamond Light Source
author_email = data_analysis@diamond.ac.uk
description = Screening program for small-molecule single-crystal X-ray diffraction data
long_description = file: README.rst
licence = BSD license
licence_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent
project_urls =
	Download = https://github.com/xia2/screen19/releases
	GitHub = https://github.com/xia2/screen19
	Bug-Tracker = https://github.com/xia2/screen19/issues

[options]
package_dir =
   =src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires = python_version>='3.8'
test_suite = tests
tests_require = pytest
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	screen19 = screen.screen:main
	screen19.minimum_exposure = screen.minimum_exposure:main
libtbx.dispatcher.script = 
	screen19.minimum_exposure = screen19.minimum_exposure
libtbx.precommit = 
	screen19 = screen19

[tool:pytest]
collect_ignore = ['setup.py']
